# nix-templates

./: .gitignore  README.md  flake.nix
templates/moscripts/: README.md  flake.nix  pyproject.toml
templates/moscripts-OLD/: .envrc  .gitignore
templates/moscripts-OLD/apps/: greet.py
templates/moscripts-OLD/src/moscripts/: __init__.py
templates/moscripts-OLD/tests/: test_sanity.py
templates/moscripts-x86_64-linux/: .gitignore  README.md  flake.nix
templates/moscripts-x86_64-linux/apps/: greet.py  hello.py
templates/moscripts-x86_64-linux/tests/: test_moscripts.py
templates/moscripts/apps/: hello.py  motmp.py  mpv_playlists.py
templates/moscripts/pythonScripts/: human_timestamp.py  password_generator.py
templates/moscripts/shellScripts/: configure-vscode.sh
templates/moscripts/src/moscripts/: __init__.py  utilities.py
templates/moscripts/tests/: test_password_generator.py  test_sanity.py  test_utilities.py
templates/nixfastapi/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  flake.nix  main.py  pyproject.toml
templates/nixfastapi/scripts/: buildBundledApp.sh  buildLoadRun.sh  docker-compose.sh  fastapi-dev.sh  hello.py  tmux-startup.sh  tmuxStartup.sh
templates/nixfastapi/src/nixfastapi/: __init__.py
templates/nixfastapi/static/templates/: base.html  hello.html  index.html
templates/nixfastapi/tests/: test_sanity.py
