[project]
name = "moscripts"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andrewthomaslee", email = "andrewthomaslee.business@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.10.1",
    "typer>=0.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    {include-group = "test"},
    "marimo[recommended]>=0.15.0",
    "python-lsp-server>=1.13.0",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]
test = [
    "pyrefly>=0.29.2",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.9",
]

[tool.pyrefly]
project-includes = [
    "**/*", 
    "**/apps/**/*", 
    "**/tests/**/*", 
    "**/pythonScripts/**/*", 
    "**/src/**/*"
]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/__marimo__",
    "**/.direnv",
    "**/result",
    "**/*venv/**/*",
]
