[project]
name = "nixfastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andrewthomaslee", email = "andrewthomaslee.business@gmail.com" },
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]
